# Office-Lead-Scraper

./: .gitignore  .replit  app.py  ch_enrich.py  cleanup_log.txt  config.py  context_ch_scraper.md  context_enrichment.md  context_flask_ui.md  context_models.md  deploy.sh  leads_backup.csv  main.py  office_leads.csv  office_leads_backup.csv  pyproject.toml  refine_leads.py  replit.md  run_cleanup.py  run_email_rescrape.py  run_final_sanitise.py  run_geo_classify.py  run_heading_team_enrichment.py  run_js_scrape.py  run_office_enrichment.py  run_surgical_enrichment.py  run_website_discovery_test.py  run_website_discovery_v2.py  surgical_enrichment_log.txt  test_website_discovery.csv  test_website_discovery_v2.csv  unit8_leads_enriched.csv  unit8_leads_enriched_BACKUP_before_heading_team.csv  unit8_leads_enriched_backup.csv  unit8_leads_excluded.csv  unit8_leads_missing_name.csv  worker.py
attached_assets/: Pasted--Critical-Fix-Contact-Name-Extraction-on-Team-Pages-Obj_1770665476446.txt  Pasted--General-Context-You-ve-already-built-a-great-base-data_1770378924631.txt  Pasted--Instructions-for-Replit-Agent-Fix-Missed-Obvious-Email_1770754840926.txt  Pasted--Key-Objectives-for-src-enricher-py-Improvements-Detect_1770565449065.txt  Pasted--Purpose-Continue-refining-the-enrichment-logic-for-Uni_1770659738468.txt  Pasted--Refined-Feedback-and-Instructions-for-src-enricher-py-_1770572011669.txt  Pasted--Replit-Agent-Feedback-Scraper-Improvement-Overall-Grea_1770129746725.txt  Pasted--Updated-Instruction-Set-for-the-Replit-Agent-1-Name-Va_1770572456196.txt  (+18 more)
src/: __init__.py  (+5 more)
(+9 files in other folders)
