[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "requests>=2.32.5",
]
